[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemies/FrostMan1.png" type="Texture" id=1]
[ext_resource path="res://enemies/FrostMan1-1.png" type="Texture" id=2]
[ext_resource path="res://FrostBall.tscn" type="PackedScene" id=3]
[ext_resource path="res://FrostMan.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 41.9194 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 45 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 41.531 )

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.717647, 0.0901961, 0.0901961, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Attack" ]
}

[node name="FrostMan" type="KinematicBody2D" groups=["Magician"]]
collision_layer = 0
collision_mask = 38
script = ExtResource( 4 )
Magic = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Attack"
frame = 1
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.17166 )
shape = SubResource( 2 )

[node name="Dodge" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dodge"]
position = Vector2( 0, 3.74576 )
shape = SubResource( 3 )

[node name="TakeAim" type="RayCast2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PJ_Check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PJ_Check"]
position = Vector2( 0, 6.78948 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 2

[node name="FloorDetect" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="CeilingDetecter" type="RayCast2D" parent="."]
position = Vector2( 0.594604, 30.9194 )
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 2

[connection signal="area_entered" from="Dodge" to="." method="_on_Dodge_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="PJ_Check" to="." method="_on_PJ_Check_area_entered"]
